cas/ingress-cas/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sso
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Forwarded-Proto https;
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    # 定义域名
    - host: cas.your-domain.com
      http:
        paths:
        # 不同path转发到不同端口
          - path: /(cas/.*)
            pathType: Prefix
            backend:
              service:
                name: cas-server
                port:
                  number: 8080
